# UCL

./: .gitignore  SPEC.md  example.ucl  readme.md
libs/python/: README.md  docs.md  parser.py  pyproject.toml  test.py
libs/typescript/: README.md  bundle.js  bunfig.toml  docs.md  package.json
libs/typescript/__tests__/: parser.test.ts
libs/typescript/__tests__/test_files/sub/: security.ucl
libs/typescript/src/: errors.ts  index.ts  parser.ts  types.ts  ucl-parser.ts
libs/typescript/src/utils/: expression-evaluator.ts  reference-resolver.ts  string-parser.ts  type-converter.ts  value-parser.ts
test_files/: main.ucl
test_files/sub/: db.ucl  nested.ucl
